해킹시도로 인한 차단 추가

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,10 @@ events {
 }
 
 http {
+    deny 8.152.208.190;
+    deny 45.90.162.234;
+    allow all;
+
     upstream django {
         server django:8000;  # Django 서비스 이름과 포트
     }
@@ -13,7 +17,16 @@ http {
         listen 80;
         server_name localhost;
 
+        # 악성 경로 차단
+        location ~* ^/shell {
+            return 403;  # 금지된 요청
+        }
+
+        # 쉘 명령어 패턴 차단 (쿼리 문자열 검사)
         location / {
+            if ($request_uri ~* "[;&|><\`\$\(\)]") {
+                return 403;  # 쉘 메타문자 포함 시 차단
+            }
             proxy_pass http://django;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -22,6 +35,9 @@ http {
         }
 
         location /ws/ {
+            if ($request_uri ~* "[;&|><\`\$\(\)]") {
+                return 403;  # WebSocket에서도 차단
+            }
             proxy_pass http://django;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
